css/styles.css
/* ... */
.portfolio-card-content {
    padding: 32px 16px;
    border: 1px solid var(--cornflower);
    border-top: none;
    }

.portfolio-subtitle {
    margin-bottom: 8px;
    }
.portfolio-img-wrapper {
    position: relative;
    overflow: hidden;
    }
.portfolio-overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    padding: 40px 32px;
    background-color: var(--iris);
    color: var(--cloud);
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;
    transform: translateY(100%);
    transition: transform var(--transition-dur-and-func);
    }

.portfolio-item:hover .portfolio-overlay {
    transform: translateY(0);
    }

/* #endregion Our Portfolio SECTION */
   
/* #endregion MAIN CONTENT */

/* #region FOOTER */
.footer {
    background-color: var(--navy-blue);
    padding: 96px 0;
    }

@media screen and (min-width: 1158px) {
    .footer {
        padding: 100px 0;
            }
}

.footer-info {
    text-align: center;
    margin-bottom: 72px;
    /* Повертаємо для мобайла */
}

@media screen and (min-width: 768px) {
    .footer-info {
        text-align: left;
        margin-bottom: 0;
        /* Обнуляємо для планшета, бо там працює row-gap: 72px */
        margin-right: 24px;
    }
}

.footer-logo {
    display: inline-block;
    margin-bottom: 16px;
    font-family: var(--second-family);
    font-weight: 700;
    font-size: 18px;
    line-height: 1.17;
    letter-spacing: 0.03em;
    text-transform: uppercase;
    color: var(--iris);
    text-decoration: none;}

.logo-light {
    color: var(--cloud);}

.footer-text {
    color: var(--cloud);
    max-width: 264px;
    line-height: 1.5;
    letter-spacing: 0.02em;}

.footer-container {
  display: flex;
  flex-direction: column;
  align-items: center; /* Центрування на мобайлі */
  gap: 72px;
}

@media screen and (min-width: 768px) {
    .footer-container {
        display: flex;
        flex-wrap: wrap;
        align-items: baseline;
        column-gap: 24px;
        row-gap: 72px;
        padding-left: 108px;
        }
}

@media screen and (min-width: 1158px) {
    .footer-container {
        padding-left: 15px;
        column-gap: 0;
        row-gap: 0;
        flex-wrap: nowrap;
        gap: unset;
        }
}
.footer-social-box {
  text-align: center;
}

@media screen and (min-width: 768px) {
  .footer-social-box {
    text-align: left;
  }
}

.footer-social-title {
    font-weight: 500;
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;
    color: var(--white);
    margin-bottom: 16px;
    }

.footer-social-list {
    display: flex;
    gap: 16px;
    }

.footer-social-item {
    width: 40px;
    height: 40px;
    }   

.footer-social-link {
    width: 100%;
    height: 100%;
    background-color: var(--iris);
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: background-color var(--transition-dur-and-func);
    }
.footer-social-link:hover,
.footer-social-link:focus {
    background-color: var(--green);
    }

.footer-social-icon {
    fill: var(--cloud);
    }
/* #endregion FOOTER */

/* #region FOOTER SUBSCRIBE */
.footer-subscribe-container {
  width: 100%;
  text-align: center;
}

@media screen and (min-width: 768px) {
  .footer-subscribe-container {
    width: auto;
    text-align: left;
  }
}

@media screen and (min-width: 1158px) {
  .footer-subscribe-container {
    margin-left: auto;
  }
}

.footer-subscribe-form {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 16px;
}

@media screen and (min-width: 768px) {
  .footer-subscribe-form {
    flex-direction: row;
    gap: 24px;
  }
}

.footer-subscribe-title {
    margin-bottom: 16px;
    font-weight: 500;
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;
    color: var(--white);
}

.footer-subscribe-input {
  width: 288px;
  height: 40px;
  border: 1px solid var(--white);
  background-color: transparent;
  font-size: 12px;
  line-height: 2;
  letter-spacing: 0.04em;
  padding-left: 16px;
  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
  border-radius: 4px;
  color: var(--white);
  outline: none;
}

@media screen and (min-width: 768px) {
  .footer-subscribe-input {
    width: 264px;
  }
}

.footer-subscribe-input:focus {
    border-color: var(--green);
}

.footer-subscribe-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  min-width: 165px;
  height: 40px;
  background-color: var(--iris);
  border-radius: 4px;
  border: none;
  font-weight: 500;
  line-height: 1.5;
  letter-spacing: 0.04em;
  color: var(--white);
  cursor: pointer;
  transition: background-color var(--transition-dur-and-func);
}

.footer-subscribe-input::placeholder {
    color: var(--white);
}

.footer-subscribe-btn:hover,
.footer-subscribe-btn:focus {
    background-color: var(--green);
}

.footer-subscribe-icon {
    margin-left: 16px;
    fill: var(--white);
}

/* #endregion */
/* #region MODAL */
.backdrop {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: var(--navy-blue-modal);
    opacity: 0;
    visibility: hidden;
    pointer-events: none;
    transition: opacity var(--transition-dur-and-func), visibility var(--transition-dur-and-func);
}

.backdrop.is-open {
    opacity: 1;
    visibility: visible;
    pointer-events: auto;
}

.modal {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 288px; 
  min-height: 623px; 
  background: var(--dairy);
  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
    0px 2px 1px rgba(0, 0, 0, 0.2);
  border-radius: 4px;
  padding: 72px 16px 24px 16px;
  transition: transform var(--transition-dur-and-func);
}

@media screen and (min-width: 768px) {
  .modal {
    width: 408px;
    min-height: 584px;
    padding: 72px 24px 24px 24px;
  }
}
/* ... */

